# tpm-ops

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: cli.rs  commands.rs  keys.rs  main.rs  pem.rs  quote.rs  seal.rs  sign.rs  test.rs  tpm.rs  verify.rs
